# snack-desktop

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/actions/prepare-release-context/: action.yml
.github/workflows/: release.yml
scripts/: README.md  build.cmd  build.ps1  dev.cmd  dev.ps1  index.cjs  install-tauri-cli.cmd  install-tauri-cli.ps1  package-macos-release.sh
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  snack-web-force-update-exit.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-desktop-diagnostics.json  allow-download-snack-file.json  allow-exit-after-force-update-cancel.json  allow-set-desktop-attention.json
src-tauri/src/: app_menu.rs  attention.rs  commands.rs  constants.rs  download.rs  lib.rs  logging.rs  main.rs  navigation.rs  platform.rs  record_import.rs  web.rs  window_state.rs
