[package]
name = "snack-desktop"
version = "0.1.0"
description = "Snack desktop client"
authors = ["Snack"]
edition = "2021"

[lib]
name = "snack_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Snack"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["fs", "io-util"] }
