[package]
name = "snack-desktop"
version = "0.1.0"
description = "Snack desktop client"
authors = ["Snack"]
edition = "2021"

[lib]
name = "snack_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "Snack"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = { version = "2.4.3", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
tokio = { version = "1", features = ["fs", "io-util"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", features = ["NSPasteboard"] }
objc2-foundation = { version = "0.3.2", features = ["NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_DataExchange", "Win32_System_Memory"] }
